uploading files to deploy. Javascript file done. css file done.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,49 @@
+body
+{
+	background-image: url("../images/sevenDwarf.jpg");
+	min-height: 500px;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	font-family: 'Pangolin', cursive;
+}
+
 img
 {
 	width: 50%;
+	background-color: white;
+	margin-top: 50px;
+}
+h3
+{
+	font-family: 'Pangolin', cursive;
+}
+
+.instructions
+{
+	font-family: 'Pangolin', cursive;
+	/*background-color:#668fe2;*/
+	border-radius: 25px;
+	/*background: linear-gradient(-90deg, #202de5, #a5abff); */
+}						
+
+.container
+{
+	background-color:#668fe2;
+	border-radius: 25px;
+	background: linear-gradient(-90deg, #202de5, #a5abff); 
+	margin-top: 50px;
+	opacity: 0.9;
+}
+
+.title
+{
+	font-family: 'Pangolin', cursive;
+	margin-top: 50px;
+	padding: 20px;
+	background-color:#668fe2;
+	border-radius: 25px;
+	background: linear-gradient(-90deg, #202de5, #a5abff); 
+	margin-top: 50px;
 }
